--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -18,6 +18,7 @@
 
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -40,6 +41,7 @@
     
     section#login{
         width: 990px;
+        height: 400px;
     }
 
     section#login > div#imagem {
@@ -59,6 +61,7 @@
 
     div#formulario > p {
         font-size: 1.2em ;
+        margin: 20px 0px;
     }
     
 
