--- a/estilos.css
+++ b/estilos.css
@@ -38,7 +38,7 @@ section#login {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
     transform: translate(-50%, -50%);
-    transition: width .3s, height .3s;
+    transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
 
@@ -55,7 +55,7 @@ section#login > div#formulario {
     padding: 10px;
 }
 
-div#formulario {
+div#formulario > h1 {
     text-align: center;
     margin-bottom: 10px;
 }
@@ -87,13 +87,14 @@ div.campo > i {
 
 div.campo > input {
     background-color: #94cfcd;
-    font-size: 1em;
-    width: calc(100% - 44px);
-    height: 100%;
-    border: 0px;
-    border-radius: 8px;
-    padding: 4px;
-    transform: translatey(-10px);
+   font-size: 1em;
+    width: calc(100% - 54px);
+   height: 100%;
+   border: 0px;
+   border-radius: 8px;
+   padding: 4px;
+
+   transform: translateY(-11px);
 }
 
 div.campo > input:focus-within {
